--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
 	"main": "index.js",
 	"author": "WebDesign Master",
 	"type": "module",
-	"browserslist": [ "last 10 versions" ],
+	"browserslist": [
+		"last 10 versions"
+	],
 	"license": "ISC",
-	"scripts": { "start": "gulp" },
+	"scripts": {
+		"start": "gulp"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.19.6",
 		"@babel/preset-env": "^7.19.4",
@@ -37,5 +41,8 @@
 		"terser-webpack-plugin": "^5.3.6",
 		"webpack": "^5.74.0",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"sweetalert2": "^11.7.3"
 	}
 }
